deployment/nginx-ing-class.yaml
apiVersion: v1      # Ingress nginx class + made default
items:
- apiVersion: networking.k8s.io/v1
  kind: IngressClass
  metadata:
    annotations:
      ingressclass.kubernetes.io/is-default-class: "true"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"IngressClass","metadata":{"annotations":{"ingressclass.kubernetes.io/is-default-class":"true","meta.helm.sh/release-name":"nginx-ingress","meta.helm.sh/release-namespace":"default"},"creationTimestamp":"2024-11-15T13:24:41Z","generation":1,"labels":{"app.kubernetes.io/component":"controller","app.kubernetes.io/instance":"nginx-ingress","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"ingress-nginx","app.kubernetes.io/part-of":"i [...]
      meta.helm.sh/release-name: nginx-ingress
      meta.helm.sh/release-namespace: default
    creationTimestamp: "2024-11-15T13:24:41Z"
    generation: 1
    labels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: nginx-ingress
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/version: 1.11.3
      helm.sh/chart: ingress-nginx-4.11.3
    name: nginx
    resourceVersion: "11211796"
    uid: 6c8f1cfe-38cf-4238-b660-13c6a2d21468
  spec:
    controller: k8s.io/ingress-nginx
kind: List
metadata:
  resourceVersion: ""
