deployment/gv-back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gv-back-deployment
  labels:
    app: gv-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gv-back
  template:
    metadata:
      labels:
        app: gv-back
    spec:
      containers:
      - name: gv-back
        image: mateduard/k8s-cluster-back:v1.4
        ports:
        - name: http
          containerPort: 5000
        resources:
          requests:
            memory: "200Mi"      # Minimum memory guaranteed to the container
            cpu: "100m"          # Minimum CPU guaranteed (100 millicores, or 0.1 CPU)
          limits:
            memory: "250Mi"        # Maximum memory the container can use
            cpu: "150m"
