deployment/gv-front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gv-front-service
  namespace: default
  labels:
    app: gv-front
spec:
  type: ClusterIP
  selector:
    app: gv-front
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
